@@ -149,15 +149,6 @@ abstract
 
 
 
-%insert a few newpages here to make sure the refs section follows the tables
-~
-\newpage
-~
-\newpage
-~
-\newpage
-~
-\newpage
 
 
 
